# fastapi-tutorial

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  tox.ini
requirements/: requirements.txt
